# tlaplusplus

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLOUD_INIT_NOTES.md  Cargo.toml  README.md  RELEASE_1.0.0_LOG.md  RELEASE_1.0.0_PLAN.md  RELEASE_1.0.0_SUMMARY.md  RELEASE_1.0.1_PLAN.md  RELEASE_1.0.1_SUMMARY.md  RELEASE_1.1.0_SUMMARY.md  RELEASE_1.2.0_SUMMARY.md  RELEASE_1.2.1_SUMMARY.md  RELEASE_1.2.2_SUMMARY.md  RELEASE_1.2.3_SUMMARY.md  RELEASE_1.2.4_SUMMARY.md  RELEASE_1.2.5_SUMMARY.md  RELEASE_1.2.6_SUMMARY.md  RELEASE_1.2.7_SUMMARY.md  S3_HANDOFF.md
.cargo/: mutants.toml
.ci/: README.md  bench.sh  check.sh  install-hooks.sh  last-analysis.txt  pre-commit  pre-push
.github/workflows/: chaos-smoke.yml  ci.yml  diff-tlc.yml  heavy-gates.yml  release.yml  verus.yml
corpus/: .gitignore  Combined.cfg  Combined.tla  CombinedSimple.cfg  CombinedSimple.tla  EnabledTest.cfg  EnabledTest.tla  FingerprintResize.tla  InstanceTest.tla  InstanceTestSimple.cfg  InstanceTestSimple.tla  MultipleExtendsTest.cfg  MultipleExtendsTest.tla  NegativeIntTest.tla  NestedExceptTest.cfg  NestedExceptTest.tla  OperatorSubstitutionTest.cfg  README.md  RecursiveTest.cfg  SimpleCounter.tla  SimpleCounterViolation.tla  SimpleCounter_TTrace_1772119963.tla  SimpleCounter_TTrace_1772119999.tla  StringTest.cfg  StringTest.tla  TemporalQuantTest.cfg  TemporalQuantTest.tla  WorkQueue.tla  index.tsv
corpus/diff_test/: allowlist.tsv  list.tsv
corpus/examples/: AssertDisabled.tla  AssertReached.tla  ClockDetector.tla  ClockDetectorMC.tla  ConstStateOmit.cfg  ConstStateOmit.tla  ExistsGuardedNestedDisjunction.tla  InitDisjunctConjunct.cfg  InitDisjunctConjunct.tla  LetHiddenPrime.tla  NestedActionConstraint.cfg  NestedActionConstraint.tla  PrimedArgActionStaging.tla  SimpleCounterNoConfig.tla  UnchangedDefinedTuple.cfg  UnchangedDefinedTuple.tla
corpus/internal/: WorkQueue.cfg
corpus/internals/: BloomAutoSwitch.cfg  BloomAutoSwitch.tla  CheckpointDrain.cfg  CheckpointDrain.tla  FingerprintResize.cfg  FingerprintResize.tla  FingerprintStoreResize.cfg  FingerprintStoreResize.tla  PorBenchPipeline.cfg  PorBenchPipeline.tla  PorBenchProcessGrid.cfg  PorBenchProcessGrid.tla  PorDependencyChain.tla  PorLiveness.tla  PorSharedCounter.tla  PorTwoCounters.tla  PorViolation.tla  QueueSegmentSync.tla  QueueSegmentSync_Buggy.cfg  QueueSegmentSync_Fixed.cfg  S3SegmentPrune.tla  TraceMinimizationDiamond.tla  WorkQueue.tla  WorkStealingTermination.cfg  WorkStealingTermination.tla  WrapperNextFairness.tla
corpus/language/: MultiVarQuantifierTest.cfg  MultiVarQuantifierTest.tla  NatOverrideMembership.cfg  NatOverrideMembership.tla  OperatorSubstitutionTest.tla  RecordSetTest.tla  RecursiveTest.cfg  RecursiveTest.tla  SetOperatorsTest.tla  ViewTest.cfg  ViewTest.tla
corpus/language_coverage/: .gitignore  CoverageHelper.tla  InitNextTemporalQuant.cfg  InitNextTemporalQuant.tla  LanguageFeatureMatrix.cfg  LanguageFeatureMatrix.tla  LanguageFeatureMatrixFair.cfg  LanguageFeatureMatrix_NoEnabled.cfg
corpus/public/: public_corpus.lock.tsv  public_corpus.tsv
corpus/temporal/: FairnessTest.cfg  FairnessTest.tla  LivenessTest.cfg  LivenessTest.tla
docs/: T10.2-phase2-refined.md  T10.2-streaming-scc-design.md  benchmarks.md  eval-refactor-plan.md  eval-unify-phase0-audit.md  main-refactor-plan.md  numa_routing_design.md  runtime-refactor-plan.md  usage.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bloom_filter.rs  fuzz_checkpoint_quiescence.rs  fuzz_fingerprint_store.rs  fuzz_queue_serialization.rs  fuzz_quiescence_timeout.rs  fuzz_s3_manifest.rs  fuzz_tla_config.rs  fuzz_tla_module.rs  fuzz_tla_swarm.rs  fuzz_tla_value_ops.rs
notes/: 100-CORE-SCALING-FINAL.md  100-core-scaling-analysis.md  HONEST-ASSESSMENT.md  PERFORMANCE-SUMMARY.md  WORK-STEALING-SUCCESS.md  combined-analysis.txt  combined-gap-report.md  corpus-plan.md  getting-started-plan.md  scaling-bottleneck.md  standard-module-operators.md  tla-feature-reference.md
scripts/: analyze_tla_corpus.sh  analyze_tla_examples.sh  chaos_smoke.sh  chaos_soak.sh  diff_tlc.sh  fuzz.sh  refresh_public_corpus_shas.sh  regen_state_graph_snapshots.sh  release.sh  scan_underexploration.sh  tlc_check.sh  tlc_corpus.sh  tlc_public_corpus.sh  verus_bootstrap.sh
spec/: CheckpointQuiescence.tla  CheckpointQuiescence_Liveness.cfg  CheckpointQuiescence_Small.cfg
src/: autotune.rs  canon.rs  chaos.rs  coverage.rs  fairness.rs  lib.rs  liveness.rs  main.rs  model.rs  runtime.rs  simulation.rs  streaming_scc.rs  symmetry.rs  system.rs  trace_minimize.rs
src/cli/: analyze_tla.rs  args.rs  list_checkpoints.rs  mod.rs  probe.rs  run_adaptive_branching.rs  run_counter_grid.rs  run_flurm_lifecycle.rs  run_high_branching.rs  run_model.rs  run_tla.rs  shared.rs
src/distributed/: batch.rs  bloom.rs  handler.rs  mod.rs  protocol.rs  proxy.rs  ring.rs  transport.rs  work_stealer.rs
tests/: checkpoint_chaos.rs  checkpoint_properties.rs  compiled_vs_interpreted.rs  compiler_helper_coverage_t207.rs  compiler_helper_coverage_t207b.rs  compiler_helper_coverage_t207c.rs  compiler_helper_coverage_t207e.rs  compiler_helper_coverage_t207f.rs  compiler_helper_coverage_t207g.rs  compiler_helper_coverage_t207h.rs  cross_node_steal_handshake.rs  dfs_cluster_layer_b.rs  dfs_cluster_real_tcp.rs  dfs_memory_benchmark.rs  dfs_pool_parity.rs  dfs_pool_throughput_benchmark.rs  dfs_worker_parity.rs  distributed_handler_with_mock.rs  expr_v2_shadow_compare.rs  fuzz_oom_regressions_t201.rs  fuzz_oom_regressions_t203.rs  fuzz_panic_regressions_t101.rs  fuzz_t101_1_divergences.rs  fuzz_t202_lambda.rs  fuzz_t205_ioenv.rs  fuzz_t206_arith_chain.rs  joint_init_invariant_t5_5.rs  liveness_followups_t10_1_4.rs  next_splitter_t1_5.rs  numa_diagnostics.rs  por_benchmark.rs  por_correctness.rs  queue_compression_benchmark.rs  queue_spill_soundness_t11_1.rs  quiescence_timeout_tests.rs  reached_assertion_violation.rs  state_graph_snapshots.rs  streaming_init_t5_4.rs  streaming_scc_exploration_parity.rs  streaming_scc_oracle.rs  (+4 more)
verification/cargo-verus-demo/: Cargo.toml
verification/cargo-verus-demo/src/: lib.rs
(+794 files in other folders)
