[package]
name = "tlaplusplus"
version = "0.2.0"
edition = "2024"

[features]
default = []
# Enable fail points for chaos/fault injection testing
failpoints = ["fail/failpoints"]

[dependencies]
# Chaos testing - only active with failpoints feature
fail = "0.5"
ahash = "0.8"
anyhow = "1.0.100"
bincode = "1.3.3"
bloomfilter = "3.0.1"
chrono = "0.4"
clap = { version = "4.5.51", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossbeam-deque = "0.8.6"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
dashmap = "6.1.0"
libc = "0.2.182"
num_cpus = "1.17.0"
parking_lot = "0.12.5"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
sled = "0.34.7"
tokio = { version = "1.41", features = ["rt-multi-thread", "fs", "io-util", "time", "macros", "signal", "sync"] }
twox-hash = "2.1.2"
zstd = "0.13"

# AWS SDK for S3 persistence (built-in for spot instance checkpoint/resume)
aws-sdk-s3 = "1.65"
aws-config = "1.5"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"

[dev-dependencies]
proptest = "1.5"
arbitrary = { version = "1.3", features = ["derive"] }
serial_test = "3"
