[package]
name = "tlaplusplus"
version = "1.0.1"
edition = "2024"

[features]
default = []
# Enable fail points for chaos/fault injection testing
failpoints = ["fail/failpoints"]
# Enable Z3-backed symbolic Init enumeration (T5).
# Requires libz3-dev / clang to build the z3-sys bindgen step.
symbolic-init = ["dep:z3"]

[dependencies]
# Chaos testing - only active with failpoints feature
fail = "0.5"
ahash = "0.8"
anyhow = "1.0.100"
bincode = "1.3.3"
bloomfilter = "3.0.1"
chrono = "0.4"
clap = { version = "4.5.51", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossbeam-deque = "0.8.6"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
dashmap = { version = "6.1.0", features = ["raw-api"] }
libc = "0.2.182"
num_cpus = "1.17.0"
parking_lot = "0.12.5"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
sled = "0.34.7"
tokio = { version = "1.41", features = ["rt-multi-thread", "fs", "io-util", "net", "time", "macros", "signal", "sync"] }
twox-hash = "2.1.2"
zstd = "0.13"

# Optional Z3 backend for symbolic Init enumeration (T5). Behind the
# `symbolic-init` feature flag because the z3 build requires libz3-dev
# and clang for bindgen.
z3 = { version = "0.12", default-features = false, optional = true }

# AWS SDK for S3 persistence (built-in for spot instance checkpoint/resume)
aws-sdk-s3 = "1.65"
aws-config = "1.5"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"

[dev-dependencies]
proptest = "1.5"
arbitrary = { version = "1.3", features = ["derive"] }
serial_test = "3"
tempfile = "3"
