[package]
name = "tlaplusplus"
version = "1.2.30"
edition = "2024"

# T13.4 Phase 2 — cargo-verus reads this to know it should verify this
# crate. Only meaningful when the `verus` feature is on; ignored by
# regular `cargo build` / `cargo test`.
[package.metadata.verus]
verify = true

[features]
default = []
# Enable fail points for chaos/fault injection testing
failpoints = ["fail/failpoints"]
# Enable Z3-backed symbolic Init enumeration (T5).
# Requires libz3-dev / clang to build the z3-sys bindgen step.
symbolic-init = ["dep:z3"]
# Dual-evaluator unification Phase 0: when a model hot-path predicate is
# evaluated via the interpreted `eval_expr`, also evaluate it via
# `eval_compiled(compile_expr(..))` and log any divergence. OFF by default —
# zero cost on the production path (the check helper compiles to a no-op).
# Enable + set TLAPP_EVAL_CONSISTENCY=1 to surface real-spec divergences on a
# corpus run. See docs/eval-unify-phase0-audit.md.
eval-consistency-check = []
# Enable Verus annotations on shipping FingerprintShard (T13.4 Phase 2).
# Activates the Verus path-deps below; only needed for `cargo verus check`,
# not for regular `cargo build` / `cargo test`. The Verus deps are optional
# git-deps pinned to a known-good Verus rev; default builds don't fetch them.
verus = [
    "dep:vstd",
    "dep:verus_builtin",
    "dep:verus_builtin_macros",
    "dep:verus_state_machines_macros",
]

[dependencies]
# Chaos testing - only active with failpoints feature
fail = "0.5"
ahash = "0.8"
anyhow = "1.0.100"
bincode = "1.3.3"
bloomfilter = "3.0.1"
chrono = "0.4"
clap = { version = "4.5.51", features = ["derive"] }
crossbeam-channel = "0.5.15"
crossbeam-deque = "0.8.6"
crossbeam-queue = "0.3.12"
crossbeam-utils = "0.8.21"
dashmap = { version = "6.1.0", features = ["raw-api"] }
libc = "0.2.182"
num_cpus = "1.17.0"
parking_lot = "0.12.5"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
sled = "0.34.7"
tokio = { version = "1.41", features = ["rt-multi-thread", "fs", "io-util", "net", "time", "macros", "signal", "sync"] }
twox-hash = "2.1.2"
zstd = "0.13"

# Optional Z3 backend for symbolic Init enumeration (T5). Behind the
# `symbolic-init` feature flag because the z3 build requires libz3-dev
# and clang for bindgen.
z3 = { version = "0.12", default-features = false, optional = true }

# AWS SDK for S3 persistence (built-in for spot instance checkpoint/resume)
aws-sdk-s3 = "1.65"
aws-config = "1.5"

# Verus annotations on shipping code (T13.4 Phase 2, opt-in via `verus` feature).
# Git deps so Mac/CI cargo builds don't require a local Verus checkout; only
# fetched when the `verus` feature is enabled. Pinned to a known-good
# Verus rev that matches the verification spot's `git clone --depth 1`
# (currently 46362a2). Bump in lockstep with spot rebuilds — verus
# binary and vstd source must come from the same commit, else verus
# panics in erase.rs when looking up vstd built-ins, or fails with
# external_trait_specification mismatches on rustc-version-sensitive
# items like slice::SliceIndex.
vstd = { git = "https://github.com/verus-lang/verus.git", rev = "46362a2", optional = true }
verus_builtin = { git = "https://github.com/verus-lang/verus.git", rev = "46362a2", optional = true }
verus_builtin_macros = { git = "https://github.com/verus-lang/verus.git", rev = "46362a2", optional = true }
verus_state_machines_macros = { git = "https://github.com/verus-lang/verus.git", rev = "46362a2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"
# jemalloc as the global allocator (Linux only). The parallel work-stealing
# model checker is allocation-heavy with heavy CROSS-THREAD frees (worker A
# allocates a state, worker B steals and drops it). glibc malloc serializes
# such cross-arena frees; jemalloc's sharded per-thread caches handle the
# pattern far better — +29% state-exploration throughput on MCKVSSafetyMedium
# (see the [global_allocator] in src/main.rs).
tikv-jemallocator = "0.7.0"

[dev-dependencies]
proptest = "1.5"
arbitrary = { version = "1.3", features = ["derive"] }
serial_test = "3"
tempfile = "3"
