[package]
name = "tlaplusplus-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.tlaplusplus]
path = ".."

# Existing TLA+ parsing fuzz targets
[[bin]]
name = "fuzz_tla_module"
path = "fuzz_targets/fuzz_tla_module.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tla_config"
path = "fuzz_targets/fuzz_tla_config.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tla_value_ops"
path = "fuzz_targets/fuzz_tla_value_ops.rs"
test = false
doc = false
bench = false

# Storage layer fuzz targets (PRs #6, #7, #8)
[[bin]]
name = "fuzz_queue_serialization"
path = "fuzz_targets/fuzz_queue_serialization.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_fingerprint_store"
path = "fuzz_targets/fuzz_fingerprint_store.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_bloom_filter"
path = "fuzz_targets/fuzz_bloom_filter.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_s3_manifest"
path = "fuzz_targets/fuzz_s3_manifest.rs"
test = false
doc = false
bench = false
